# kodegen-mcp-schema

./: Cargo.toml  README.md
src/: browser.rs  citescrape.rs  claude_agent.rs  config.rs  database.rs  filesystem.rs  git.rs  github.rs  introspection.rs  lib.rs  process.rs  prompt.rs  reasoning.rs  serde_helpers.rs  terminal.rs
src/browser/: mod.rs  shared.rs
src/browser/agent/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/click/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/extract_text/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/navigate/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/research/: mod.rs  prompt_args.rs  prompts.rs  prompts.rs.old  schema.rs
src/browser/screenshot/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/scroll/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/type_text/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/browser/web_search/: mod.rs  prompt_args.rs  prompts.rs  prompts.rs.backup  prompts_temp.rs  schema.rs
src/citescrape/: mod.rs
src/citescrape/fetch/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/citescrape/scrape_url/: mod.rs  prompt_args.rs  prompts.rs  prompts.rs.broken  schema.rs
src/citescrape/web_search/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/claude_agent/: mod.rs  shared.rs
src/claude_agent/agent/: mod.rs  prompt_args.rs  prompts.rs  prompts.rs.old  schema.rs
src/config/: mod.rs
src/config/config_get/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/config/config_set/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/: mod.rs  types.rs
src/database/execute_sql/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/list_schemas/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/list_tables/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/pool_stats/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/stored_procedures/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/database/table_indexes/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/deserialize/: error.rs  extract.rs  mod.rs  registry.rs  types.rs
src/filesystem/: mod.rs  shared.rs
src/filesystem/move_file/: mod.rs  (+3 more)
src/git/: mod.rs
src/github/: mod.rs
src/introspection/: mod.rs
src/memory/: mod.rs
src/process/: mod.rs
src/prompt/: mod.rs
src/reasoner/: mod.rs  prompt_args.rs  prompts.rs.old  schema.rs
src/reasoning/: mod.rs
src/sequential_thinking/: mod.rs  prompts.rs  prompts.rs.old  schema.rs
src/terminal/: mod.rs  prompt_args.rs  prompts.rs  schema.rs
src/tool/: mod.rs  tool_history.rs  traits.rs
src/web/: mod.rs
tests/: deserialize_test.rs
tests/fixtures/: terminal_output.json
(+433 files in other folders)
