[package]
name = "kodegen_mcp_schema"
version = "0.1.3"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-mcp-tool"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
