[package]
name = "kodegen_mcp_schema"
version = "0.9.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-mcp-schema"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]

[dependencies]
kodegen_mcp_schema_macros = { version = "0.9" }
kodegen_config = { version = "0.9" }

serde = { version = "1", features = ["derive"] }
schemars = { version = "1", features = ["chrono04"] }
serde_json = "1"
thiserror = "2"
rmcp = { version = "0.10", features = ["schemars"] }
chrono = { version = "0.4", features = ["serde"] }

# Tool infrastructure dependencies (moved from kodegen-mcp-tool)
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.21"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
home = "0.5"
anyhow = "1"
http = "1"
futures = "0.3"
log = "0.4"
termcolor = "1"
tokio-util = "0.7"

# Automatic tool discovery
inventory = "0.3"

